deploy/kubernetes/1code-update-server/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: 1code-update-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: 1code-update-server
  enableDefaultDeny:
    egress: false
    ingress: false
  ingress:
    # Allow traffic from Envoy Gateway
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    # Allow DNS resolution
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
